--- a/fabis-blog/src/app/auth/register/register.component.html
+++ b/fabis-blog/src/app/auth/register/register.component.html
@@ -1,1 +1,57 @@
-<p>register works!</p>
+<div class="example-container mat-elevation-z8">
+  <div class="example-loading-shade"
+       *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  </div>
+  <mat-card class="example-card">
+    <form
+      #registerForm="ngForm"
+      (ngSubmit)="onFormSubmit(registerForm)"
+    >
+      <mat-form-field class="example-full-width">
+        <input
+          matInput
+          ngModel
+          #fullName="ngModel"
+          name="fullName"
+          type="name"
+          placeholder="Full Name"
+          required
+        >
+        <mat-error>
+          <!-- <span *ngIf="!registerForm.get('fullName').valid && registerForm.get('fullName').touched">Please enter your Full Name</span> -->
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input
+          matInput
+          ngModel
+          #email="ngModel"
+          name="email"
+          type="email"
+          placeholder="Email"
+          required
+        >
+        <mat-error>
+          <!-- <span *ngIf="!registerForm.get('username').valid && registerForm.get('username').touched">Please enter your username</span> -->
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <input
+          matInput
+          ngModel
+          #password="ngModel"
+          type="password"
+          placeholder="Password"
+          required
+        >
+        <mat-error>
+          <!-- <span *ngIf="!registerForm.get('password').valid && registerForm.get('password').touched">Please enter your password</span> -->
+        </mat-error>
+      </mat-form-field>
+      <div class="button-row">
+        <button type="submit" [disabled]="!registerForm.valid" mat-flat-button color="primary">Register</button>
+      </div>
+    </form>
+  </mat-card>
+</div>
