--- a/fabis-blog/src/app/category/category.component.html
+++ b/fabis-blog/src/app/category/category.component.html
@@ -8,7 +8,8 @@
   </div>
   <div class="mat-elevation-z8">
     <table
-      mat-table [dataSource]="data"
+      mat-table
+      [dataSource]="data"
       class="example-table"
       matSort
       matSortActive="catName"
