--- a/fabis-blog/src/app/auth/register/register.component.html
+++ b/fabis-blog/src/app/auth/register/register.component.html
@@ -19,7 +19,7 @@
           required
         >
         <mat-error>
-          <!-- <span *ngIf="!registerForm.get('fullName').valid && registerForm.get('fullName').touched">Please enter your Full Name</span> -->
+          <span *ngIf="(fullName.touched && fullName.invalid)">Please enter your Full Name</span>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
@@ -33,7 +33,7 @@
           required
         >
         <mat-error>
-          <!-- <span *ngIf="!registerForm.get('username').valid && registerForm.get('username').touched">Please enter your username</span> -->
+          <span *ngIf="(email.touched && email.invalid)">Please enter your username</span>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
@@ -46,7 +46,7 @@
           required
         >
         <mat-error>
-          <!-- <span *ngIf="!registerForm.get('password').valid && registerForm.get('password').touched">Please enter your password</span> -->
+          <span *ngIf="(password.touched && password.invalid)">Please enter your password</span>
         </mat-error>
       </mat-form-field>
       <div class="button-row">
