Added cat edit and add html

--- a/fabis-blog/src/app/category/category-add/category-add.component.html
+++ b/fabis-blog/src/app/category/category-add/category-add.component.html
@@ -53,7 +53,7 @@
             matCkeditor
             ngModel
             #catContent="ngModel"
-            name="catImgUrl"
+            name="catContent"
             placehoder="Category Content"
           ></ckeditor>
           <mat-error>
