Registration and login fixes

--- a/fabis-blog/src/app/auth/register/register.component.html
+++ b/fabis-blog/src/app/auth/register/register.component.html
@@ -41,6 +41,7 @@
           matInput
           ngModel
           #password="ngModel"
+          name="password"
           type="password"
           placeholder="Password"
           required
