--- a/fabis-blog/src/app/auth/register/register.component.html
+++ b/fabis-blog/src/app/auth/register/register.component.html
@@ -6,7 +6,7 @@
   <mat-card class="example-card">
     <form
       #registerForm="ngForm"
-      (ngSubmit)="onFormSubmit(registerForm)"
+      (ngSubmit)="onFormSubmit(registerForm.value)"
     >
       <mat-form-field class="example-full-width">
         <input
