--- a/fabis-blog/src/app/category/category-add/category-add.component.html
+++ b/fabis-blog/src/app/category/category-add/category-add.component.html
@@ -10,6 +10,7 @@
     <form
       #categoryForm="ngModel"
       ngModel
+      name="categoryForm"
       (submit)="onFormSubmit()"
     >
       <mat-form-field class="example-full-width">
