--- a/fabis-blog/src/app/category/category-edit/category-edit.component.html
+++ b/fabis-blog/src/app/category/category-edit/category-edit.component.html
@@ -8,8 +8,8 @@
   </div>
   <mat-card class="example-card">
     <form
-      ngModel
-      #categoryForm="ngModel"
+      ngForm
+      #categoryForm="ngForm"
       (submit)="onFormSubmit()"
     >
       <mat-form-field class="example-full-width">
