--- a/fabis-blog/src/app/app.component.html
+++ b/fabis-blog/src/app/app.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar>
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu">
-    <div *ngIf="loginStatus === false">
+    <div *ngIf="isLoggedIn === false">
       <button mat-menu-item [routerLink]="['/']">Home</button>
       <button mat-menu-item *ngFor="let cat of categories" [routerLink]="['/bycategory/', cat.id]">{{cat.catName}}</button>
     </div>
-    <div *ngIf="loginStatus === true">
+    <div *ngIf="isLoggedIn === true">
       <button mat-menu-item [routerLink]="['/admin']">Home</button>
       <button mat-menu-item [routerLink]="['/category']">Category</button>
       <button mat-menu-item [routerLink]="['/post']">Post</button>
