--- a/fabis-blog/src/app/auth/login/login.component.html
+++ b/fabis-blog/src/app/auth/login/login.component.html
@@ -38,7 +38,7 @@
         </mat-error>
       </mat-form-field>
       <div class="button-row">
-        <button (buttonClicked)='setLoginStatus()' type="submit" [disabled]="!loginForm.valid" mat-flat-button color="primary">Login</button>
+        <button type="submit" [disabled]="!loginForm.valid" mat-flat-button color="primary">Login</button>
       </div>
       <div class="button-row">
         <button type="button" mat-flat-button color="primary" (click)="register()">Register</button>
