--- a/fabis-blog/src/app/app.component.html
+++ b/fabis-blog/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-  <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+  <button *ngIf="isLoggedIn === 'true'" mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu">
     <div *ngIf="isLoggedIn === 'false'">
       <button mat-menu-item [routerLink]="['/']">Home</button>
