--- a/fabis-blog/src/app/auth/login/login.component.html
+++ b/fabis-blog/src/app/auth/login/login.component.html
@@ -20,7 +20,7 @@
           required
         />
         <mat-error>
-          <span *ngIf="(email.touched && email.invalid)">Please enter your username</span>
+          <span *ngIf="(email.touched && email.invalid)">Please enter your email address</span>
         </mat-error>
       </mat-form-field>
       <mat-form-field class="example-full-width">
@@ -39,8 +39,6 @@
       </mat-form-field>
       <div class="button-row">
         <button type="submit" [disabled]="!loginForm.valid" mat-flat-button color="primary">Login</button>
-      </div>
-      <div class="button-row">
         <button type="button" mat-flat-button color="primary" (click)="register()">Register</button>
       </div>
     </form>
