--- a/fabis-blog/src/app/category/category-add/category-add.component.html
+++ b/fabis-blog/src/app/category/category-add/category-add.component.html
@@ -9,7 +9,7 @@
   <mat-card class="example-card">
     <form
       #categoryForm="ngForm"
-      (submit)="onFormSubmit()"
+      (submit)="onFormSubmit(categoryForm.value)"
     >
       <mat-form-field class="example-full-width">
         <mat-label>Category Name</mat-label>
