Added spell check to wysiwyg html field

--- a/fabis-blog/src/app/category/category-edit/category-edit.component.html
+++ b/fabis-blog/src/app/category/category-edit/category-edit.component.html
@@ -47,6 +47,7 @@
         <ngx-editor
           matInput
           [formControl]="catContent"
+          [spellcheck]="true"
           [editor]="editor"
           editable="true"
           spellcheck="true"
