--- a/fabis-blog/src/app/category/category-edit/category-edit.component.html
+++ b/fabis-blog/src/app/category/category-edit/category-edit.component.html
@@ -16,7 +16,7 @@
         <input
           matInput
           [formControl]="catName"
-          placeholder="Category Name test"
+          placeholder="Category Name"
         >
         <mat-error>
           <span *ngIf="(catName.touched && catName.invalid)">Please enter Category Name</span>
